# mlip_pipelines

./: --output  .coverage  .gitignore  .gitmodules  ARCHITECT_CRITIC_REVIEW.md  README.md  SPEC.md  append_tests.py  audit_report.md  config.yaml  docker-compose.yml  dump.lammps  fix1.py  fix11.py  fix12.py  fix13.py  fix14.py  fix15.py  fix16.py  fix17.py  fix19.py  fix2.py  fix3.py  fix4.py  fix5.py  fix6.py  fix7.py  fix8.py  fix_all.py  fix_dyn.py  fix_dyn2.py  fix_dyn3.py  fix_eon.sh  fix_final_1.py  fix_final_2.py  fix_final_env.py  fix_final_exe.py  fix_final_pot.py  fix_final_pot2.py  fix_final_pots_dir.py  (+84 more)
.github/workflows/: ci.yml
.hypothesis/constants/: 0fe6f87b6086add7  10ba5d56236318bb  136a0e1065279ee3  18dd81dad62c4cc2  2c67d7ad97abfb8d  2d2c465f53aa9f68  2f41e234b8f30ea5  4c6558be4af0a1bf  503b94259df64771  579224c38839f757  593a748188161da2  5ee397e788778f2b  7262f7aa160e86bf  76a877a50ff9e3ad  794bcc57a53e9889  7b871c418134b857  864a33809b2518f1  8b3b4ce23b44e399  8e80b7715fef7604  9fffdb2edab3e1ef  ab8e2677a2db6619  b4b876f3ff34d383  b6230b1fbd958aeb  c19a89085fcc7a2f  c2e6803b18af5efe  cd1b7d41439e5deb  d41faf83e7ceee6a  da39a3ee5e6b4b0d  e360dcb741baa598  e955668e71420273  effc5c11070a8cad  f95d03cdce6c65eb  fecdb02fb3621d25
data/: accumulated.extxyz
dev_documents/: ALL_SPEC.md  USER_TEST_SCENARIO.md  test_execution_log.txt
dev_documents/system_prompts/: ARCHITECT_CRITIC_REVIEW.md  AUDITOR_INSTRUCTION.md  CODER_CRITIC_INSTRUCTION.md  CODER_INSTRUCTION.md  FINAL_REFACTOR_AUDITOR_INSTRUCTION.md  POST_AUDIT_REFACTOR_INSTRUCTION.md  REFACTOR_INSTRUCTION.md  SYSTEM_ARCHITECTURE.md
dev_documents/system_prompts_phase01/: ARCHITECT_CRITIC_INSTRUCTION.md  ARCHITECT_INSTRUCTION.md  FINAL_REFACTOR_INSTRUCTION.md  SYSTEM_ARCHITECTURE.md  USER_TEST_SCENARIO.md  project_state.json
dev_documents/system_prompts_phase02/: ALL_SPEC.md  SYSTEM_ARCHITECTURE.md  project_state.json
dev_documents/system_prompts_phase03/: USER_TEST_SCENARIO.md  project_state.json
dev_documents/system_prompts_phase04/: SYSTEM_ARCHITECTURE.md  project_state.json
dev_documents/system_prompts_phase05/: ALL_SPEC.md  SYSTEM_ARCHITECTURE.md  USER_TEST_SCENARIO.md  project_state.json
notebooks/: cycle3_uat.ipynb
potentials/: generation_002.yace
prompt/auditor/: cycle1.md  cycle2.md  cycle3.md  play.md
prompt/coder/: cycle1.md  cycle1_query.md  cycle2.md
prompt/spec/: cycle2.md  cycle3.md
prompt/test/: cycle03.md
scripts/: check_env.py  download_sssp.py
src/: __init__.py  interfaces.py
src/api/: __init__.py  main.py  routes.py
src/carvers/: box_carver.py  chemistry.py
src/config/: settings.py
src/core/: __init__.py  checkpoint.py  constants.py  energies.py  exceptions.py  interfaces.py  orchestrator.py  retry.py
src/domain_models/: __init__.py  config.py  dtos.py  gui_schemas.py
src/dynamics/: __init__.py  dynamics_engine.py  eon_driver.py  eon_wrapper.py  security_utils.py
src/engines/: lammps_mace.py
src/generators/: __init__.py  adapter.py  adaptive_policy.py  defect_builder.py  extraction.py  structure_generator.py
src/oracles/: __init__.py  base.py  dft_oracle.py  mace_manager.py  mock_oracle.py  qe_oracle.py  tiered_oracle.py
src/potentials/: factory.py  linear_ace_impl.py  mace_impl.py  pyace_impl.py  shifted_lj.py
src/trainers/: __init__.py  ace_trainer.py  binary_resolver.py  finetune_manager.py
src/utils/: sssp.py
src/validators/: reporter.py  stability_tests.py  validator.py
tests/: conftest.py  test_adapter.py  test_box_carver.py  test_box_carver_audit.py  test_cycle4.py  test_edge_cases.py  test_energies.py  test_mace_audit.py  test_mace_impl.py  test_physics_validation.py  test_pipeline.py  test_property_based.py  test_relaxer.py  test_reproducibility.py  test_round_trip.py  test_settings.py
tests/e2e/: test_api_endpoints.py  test_api_gateway.py  test_api_routes.py  test_skeleton.py
tests/integration/: test_real_loop.py
tests/uat/: test_cycle01_api.py  test_cycle03_oracle.py  test_cycle04_trainer.py  test_cycle05_dynamics.py  test_cycle06_domain_logic.py  test_cycle06_validator.py  test_skeleton.py  test_tutorial.py  verify_cycle_01_domain_logic.py  verify_cycle_02_domain_logic.py  verify_cycle_02_extraction.py  verify_cycle_03_domain_logic.py  verify_cycle_04_domain_logic.py  verify_cycle_05_domain_logic.py  verify_cycle_06_domain_logic.py
tests/unit/: test_ace_trainer.py  test_api_routes.py  (+28 more)
tutorials/: FePt_MgO_interface_energy.py  UAT_AND_TUTORIAL.py  uat_and_tutorial.py
tutorials_and_uat/: 02_defects.ipynb
(+61 files in other folders)
